005-kubernetes/deployment-api.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapi
  labels:
    app: webapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapi
  template:
    metadata:
      labels:
        app: webapi
    spec:
      ## NOTE: replace with real credential if using private registry
      # imagePullSecrets: docker
      containers:
      - name: hello
        image: nginx:alpine
        imagePullPolicy: IfNotPresent
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        ## for monitoring purpose
        # - name: prometheus
        #   containerPort: 9101
        #   protocol: TCP
        ## give some time to stop completely
        lifecycle:
          preStop:
            exec:
              command: ["sh", "-c", "sleep 5"]
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          tcpSocket:
            port: http
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 20
          tcpSocket:
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        workingDir: /app
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
        - name: config-volume
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: timezone
        hostPath:
          path: /usr/share/zoneinfo/Asia/Shanghai
      - name: config-volume
        configMap:
          name: api-site
      ## if any
      # nodeSelector:
      # affinity:
      # tolerations:
