005-kubernetes/service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: webapi-svc
  labels:
    app: webapi
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: webapi
