005-kubernetes/service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  labels:
    app: db
spec:
  type: ClusterIP
  ports:
  - port: 4000
    targetPort: 3306
    protocol: TCP
    name: db
  selector:
    app: db
